update history timeline

--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -1765,17 +1765,32 @@
       <div class="content-left-container">
         <div class="century">1644 AD</div>
         <div class="content-left">
-          <div class="">
+          <div class="timeAndArea">
             <h4 class="area">China</h4>
             <span class="period">A.D. 1644 - 1911</span>
           </div>
-          <h3>清</h3>
+          <h3>清 Qing</h3>
         </div>
-
       </div>
-
     </div>
     <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-left-container">
+        <div class="century">1644 AD</div>
+        <div class="content-left">
+          <div class="timeAndArea">
+            <h4 class="area">China</h4>
+            <span class="period">A.D. 1646 - 1683</span>
+          </div>
+          <h3>郑成功抗清</h3>
+        </div>
+      </div>
+    </div>
+    <!-- // Article -->
+
+
 
     <!-- Article -->
     <div class="timeline-article">
@@ -1902,7 +1917,7 @@
             <span class="period">A.D. 1789 - 1804</span>
             <h4 class="area">Europe</h4>
           </div>
-          <h3>启蒙运动</h3>
+          <h3>启蒙运动 Enlightenment</h3>
           <p>时间跨度: 确切开始时间没有共识, 但通常以1789年法国大革命或拿破仑战争开始(1804~1815)为结束.</p>
           <span class="timeline-author">
             <i class="material-symbols-outlined">link</i>
@@ -1979,6 +1994,21 @@
     </div>
     <!-- // Article -->
 
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-left-container">
+        <div class="century">1851 AD</div>
+        <div class="content-left">
+          <div class="timeAndArea">
+            <h4 class="area">China</h4>
+            <span class="period">A.D. 1851 - 1864</span>
+          </div>
+          <h3>太平天国运动</h3>
+        </div>
+      </div>
+    </div>
+    <!-- // Article -->
+
 
 
     <!-- Article -->
@@ -1991,6 +2021,21 @@
             <span class="period">A.D. 1856 - 1860</span>
           </div>
           <h3>第二次鸦片战争</h3>
+        </div>
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-left-container">
+        <div class="century">1861 AD</div>
+        <div class="content-left">
+          <div class="timeAndArea">
+            <h4 class="area">China</h4>
+            <span class="period">A.D. 1861 - 1895</span>
+          </div>
+          <h3>自强运动</h3>
         </div>
       </div>
     </div>
@@ -2056,8 +2101,58 @@
 
     <!-- Article -->
     <div class="timeline-article">
+      <div class="content-left-container">
+        <div class="century">1871 AD</div>
+        <div class="content-left">
+          <div class="timeAndArea">
+            <h4 class="area">China</h4>
+            <span class="period">A.D. 1871 - 1874</span>
+          </div>
+          <h3>日本侵略台湾</h3>
+        </div>
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-left-container">
+        <div class="century">1884 AD</div>
+        <div class="content-left">
+          <div class="timeAndArea">
+            <h4 class="area">China</h4>
+            <span class="period">A.D. 1884 - 1885</span>
+          </div>
+          <h3>中法战争</h3>
+        </div>
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-left-container">
+        <div class="century">1894 AD</div>
+        <div class="content-left">
+          <div class="timeAndArea">
+            <h4 class="area">China</h4>
+            <span class="period">A.D. 1894 - 1895</span>
+          </div>
+          <h3>甲午战争</h3>
+          <span class="timeline-author">
+            <i class="material-symbols-outlined">link</i>
+            <a
+              href="https://www.bakumatata.com/notes/HistoryOfChina/HistoryOfChina.html#⚔️甲午战争%201894-1895:[[⚔️甲午战争%201894-1895]%5d">Read
+              More</a></span>
+        </div>
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
       <div class="content-right-container">
-        <div class="century">918 AD</div>
+        <div class="century">1897 AD</div>
         <div class="content-right">
           <div class="timeAndArea">
             <span class="period">A.D. 1897 - 1910</span>
@@ -2066,6 +2161,56 @@
           <h3>朝鲜 大韩帝国时期</h3>
         </div>
 
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-left-container">
+        <div class="century">1898 AD</div>
+        <div class="content-left">
+          <div class="timeAndArea">
+            <h4 class="area">China</h4>
+            <span class="period">A.D. 1898</span>
+          </div>
+          <h3>百日维新（戊戌变法）</h3>
+        </div>
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-left-container">
+        <div class="century">1900 AD</div>
+        <div class="content-left">
+          <div class="timeAndArea">
+            <h4 class="area">China</h4>
+            <span class="period">A.D. 1900</span>
+          </div>
+          <h3>义和团运动</h3>
+        </div>
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-left-container">
+        <div class="century">1900 AD</div>
+        <div class="content-left">
+          <div class="timeAndArea">
+            <h4 class="area">China</h4>
+            <span class="period">A.D. 1900</span>
+          </div>
+          <h3>八国联军之役</h3>
+                    <span class="timeline-author">
+            <i class="material-symbols-outlined">link</i>
+            <a
+              href="https://www.bakumatata.com/notes/HistoryOfChina/HistoryOfChina.html#⚔️八国联军之役%201900:[[⚔️八国联军之役%201900]%5d">Read
+              More</a></span>
+        </div>
       </div>
     </div>
     <!-- // Article -->
@@ -2100,7 +2245,7 @@
             <h4 class="area">China</h4>
             <span class="period">A.D. 1911 - 1949</span>
           </div>
-          <h3>🇹🇼中华民国</h3>
+          <h3>🇹🇼中华民国建立，辛亥革命</h3>
         </div>
 
       </div>
@@ -2364,7 +2509,7 @@
             <h4 class="area">China</h4>
             <span class="period">A.D. 1949 - recent</span>
           </div>
-          <h3>中华人民共和国</h3>
+          <h3>中华人民共和国成立</h3>
         </div>
 
       </div>
@@ -2594,6 +2739,52 @@
 
     <!-- Article -->
     <div class="timeline-article">
+      <div class="content-left-container">
+        <div class="century">1972 AD</div>
+        <div class="content-left">
+          <div class="timeAndArea">
+            <h4 class="area">China</h4>
+            <span class="period">A.D. 1972</span>
+          </div>
+          <h3>中日恢复邦交</h3>
+          <p>日本正式承认中华人民共和国是中国唯一合法政府</p>
+        </div>
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-left-container">
+        <div class="century">1978 AD</div>
+        <div class="content-left">
+          <div class="timeAndArea">
+            <h4 class="area">China</h4>
+            <span class="period">A.D. 1978</span>
+          </div>
+          <h3>改革开放开始</h3>
+        </div>
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-left-container">
+        <div class="century">1979 AD</div>
+        <div class="content-left">
+          <div class="timeAndArea">
+            <h4 class="area">China</h4>
+            <span class="period">A.D. 1979</span>
+          </div>
+          <h3>美国正式承认中华人民共和国是中国的唯一合法政府</h3>
+        </div>
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
       <div class="content-right-container">
         <div class="century">1981 AD</div>
         <div class="content-right">
@@ -2666,8 +2857,6 @@
         </div>
       </div>
 
-
-
       <div class="content-right-container">
         <div class="century">1989 AD</div>
         <div class="content-right">
@@ -2682,10 +2871,111 @@
               href="https://www.bakumatata.com/notes/HistoryOfJapan/8kuNoteBook_HistoryOfJapan.html#平成时代%20Heisei%20era%201989-2019:[[平成时代%20Heisei%20era%201989-2019]%5d">Read
               More</a></span>
         </div>
-
       </div>
     </div>
     <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-right-container">
+        <div class="century">1989 AD</div>
+        <div class="content-right">
+          <div class="timeAndArea">
+            <span class="period">A.D. 1989 - 2008</span>
+            <h4 class="area">Asia</h4>
+          </div>
+          <h3>🇯🇵日本 失落的20年</h3>
+                    <span class="timeline-author">
+            <i class="material-symbols-outlined">link</i>
+            <a
+              href="https://www.bakumatata.com/notes/HistoryOfJapan/8kuNoteBook_HistoryOfJapan.html#日本的「失落年代」：1989-2008:日本的「失落年代」：1989-2008">Read
+              More</a></span>
+        </div>
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-right-container">
+        <div class="century">1990 AD</div>
+        <div class="content-right">
+          <div class="timeAndArea">
+            <span class="period">A.D. 1990</span>
+            <h4 class="area">Asia</h4>
+          </div>
+          <h3>🇰🇷韩国 接入国际互联网</h3>
+          <p>1994 年：商业互联网服务在韩国开始推出，互联网不再局限于科研用途，而是逐渐面向更广泛的用户群体。</p>
+        </div>
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-right-container">
+        <div class="century">1991 AD</div>
+        <div class="content-right">
+          <div class="timeAndArea">
+            <span class="period">A.D. 1991.12.30</span>
+            <h4 class="area">Asia</h4>
+          </div>
+          <h3>🇹🇼台湾 接入国际互联网</h3>
+          <p>台湾学术网络（TANet）通过一条 64 kbps 的国际专线与美国普林斯顿大学的 JvNCnet 建立了连接——这被认为是 台湾首次与全球互联网建立实际通信的里程碑。</p>
+          <p>1994 年台湾的商业 ISP（如 Chunghwa Telecom 旗下的 HiNet）开始出现，并通过更高带宽（如 T1）加入互联网生态，这标志着互联网服务开始拓展到更广泛的用户群体，而不再仅限于学术用途。</p>
+        </div>
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-left-container">
+        <div class="century">1994 AD</div>
+        <div class="content-left">
+          <div class="timeAndArea">
+            <h4 class="area">China</h4>
+            <span class="period">A.D. 1994.4.20</span>
+          </div>
+          <h3>中国接入国际互联网</h3>
+          <p>1994年4月20日，中国通过美国电信公司 Sprint 的国际专线（64 Kbps）与全球互联网连接，实现了真正意义上的全功能互联网接入。这次接入是中方通过与美国方面谈判、合作租用线路和协议实现的。</p>
+        </div>
+      </div>
+    </div>
+    <!-- // Article -->
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-right-container">
+        <div class="century">1994 AD</div>
+        <div class="content-right">
+          <div class="timeAndArea">
+            <span class="period">A.D. 1994</span>
+            <h4 class="area">Asia</h4>
+          </div>
+          <h3>🇯🇵日本 接入国际互联网</h3>
+          <p>1994年：日本开始建立互联网交换中心（如 NSPIXP），这标志着多个互联网服务提供商（ISPs）能够互联互通，并连接到全球互联网。</p>
+        </div>
+      </div>
+    </div>
+    <!-- // Article -->
+
+
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-left-container">
+        <div class="century">2001 AD</div>
+        <div class="content-left">
+          <div class="timeAndArea">
+            <h4 class="area">China</h4>
+            <span class="period">A.D. 2001</span>
+          </div>
+          <h3>中国加入世贸组织</h3>
+        </div>
+      </div>
+    </div>
+    <!-- // Article -->
+
 
     <!-- Article -->
     <div class="timeline-article">
