history of fashion design timeline

--- a/index.html
+++ b/index.html
@@ -282,6 +282,9 @@
                 <li>
                     <a href="ArtHistoryTimeline/art_history_timeline.html">艺术史时间线 Art History Timeline</a>
                 </li>
+                <li>
+                    <a href="FashionTimeline/fashion_timeline.html">时尚史时间线 Fashion History Timeline</a>
+                </li>
                 <li><a href="quackery/index.html">荒诞医学史 Quackery</a></li>
                 <li><a href="Feminism/index.html">女性主义史 Feminism</a></li>
                 <li>
