--- a/FashionTimeline/fashion_timeline.html
+++ b/FashionTimeline/fashion_timeline.html
@@ -5677,6 +5677,17 @@
             <p>巴黎顶尖时尚设计师所设计的微型时装模特儿巡回展“时尚剧院”到访纽约。</p>
           </div>
         </div>
+
+        <div class="content-right-container">
+          <div class="century">1946 AD</div>
+          <div class="content-right">
+            <div class="timeAndArea">
+              <span class="period">A.D. 1946</span>
+              <h4 class="area">France</h4>
+            </div>
+            <p>克里斯汀·迪奥在巴黎开办自己的时装店，次年展出自己的首批作品。</p>
+          </div>
+        </div>
       </div>
       <!-- // Article --> 
 
@@ -5692,6 +5703,17 @@
             <p>英国公司苏格兰的普林格尔成为美国最畅销品牌。</p>
           </div>
         </div>
+
+        <div class="content-right-container">
+          <div class="century">1947 AD</div>
+          <div class="content-right">
+            <div class="timeAndArea">
+              <span class="period">A.D. 1947</span>
+              <h4 class="area">France</h4>
+            </div>
+            <p>因为对时尚产业的卓越贡献，迪奥成为首位赢得内曼·马科斯奖的法国人。</p>
+          </div>
+        </div>
       </div>
       <!-- // Article -->
 
@@ -5702,9 +5724,21 @@
           <div class="content-right">
             <div class="timeAndArea">
               <span class="period">A.D. 1948</span>
+              <h4 class="area">UK</h4>
+            </div>
+            <p>伦敦皇家艺术学院开办时装学院，院长为马奇·加兰德。</p>
+          </div>
+        </div>
+
+        <div class="content-right-container">
+          <div class="century">1948 AD</div>
+          <div class="content-right">
+            <div class="timeAndArea">
+              <span class="period">A.D. 1948</span>
               <h4 class="area">North America</h4>
             </div>
             <p>美孚石油公司女继承人米利森特·赫德尔斯顿·罗杰斯在布鲁克林博物馆组织了查尔斯·詹姆斯作品展览。</p>
+            <p>杰奎斯·菲斯在妻子的陪同下到美国进行促销，之后他在巴黎沙龙的销量翻了4倍。</p>
           </div>
         </div>
       </div>
@@ -5770,6 +5804,17 @@
           <div class="content-right">
             <div class="timeAndArea">
               <span class="period">A.D. 1951</span>
+              <h4 class="area">UK</h4>
+            </div>
+            <p>英国政府资助举办设计、艺术产业优秀作品庆典。</p>
+          </div>
+        </div>
+
+        <div class="content-right-container">
+          <div class="century">1951 AD</div>
+          <div class="content-right">
+            <div class="timeAndArea">
+              <span class="period">A.D. 1951</span>
               <h4 class="area">North America</h4>
             </div>
             <p>卡辛建立了邦妮·卡辛设计公司。她与多家生产商一起设计了不同价位的产品。</p>
@@ -5790,6 +5835,7 @@
               <h4 class="area">North America</h4>
             </div>
             <p>查尔斯·詹姆斯为第七大道的生产商塞缪尔·温斯顿设计了单品服饰，服饰由洛德与泰勒公司零售。</p>
+            <p>赫迪·雅曼成为第一位在纽约举办时装秀的伦敦设计师。</p>
           </div>
         </div>
       </div>
@@ -5802,9 +5848,68 @@
           <div class="content-right">
             <div class="timeAndArea">
               <span class="period">A.D. 1953</span>
+              <h4 class="area">UK</h4>
+            </div>
+            <p>诺曼·哈特奈尔为伊丽莎白二世设计了加冕礼服。</p>
+          </div>
+        </div>
+
+        <div class="content-right-container">
+          <div class="century">1953 AD</div>
+          <div class="content-right">
+            <div class="timeAndArea">
+              <span class="period">A.D. 1953</span>
               <h4 class="area">North America</h4>
             </div>
             <p>詹姆斯为奥斯汀·赫斯特设计了参加艾森豪威尔总统就职晚会的四叶草礼服，但因为没能及时完工，她到伊丽莎白女王的舞会上才穿着。</p>
+            <p>皮埃尔·巴尔曼以祖妮女士为商标名进入美国市场，</p>
+          </div>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1954 AD</div>
+          <div class="content-right">
+            <div class="timeAndArea">
+              <span class="period">A.D. 1954</span>
+              <h4 class="area">France</h4>
+            </div>
+            <p>迪奥发明了A字裙。这个术语在时装辞典中用来形容肩线狭窄，往下却开始扩展直至裙角的款式。</p>
+          </div>
+        </div>
+      </div>
+      <!-- // Article -->
+
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1957 AD</div>
+          <div class="content-right">
+            <div class="timeAndArea">
+              <span class="period">A.D. 1957</span>
+              <h4 class="area">France</h4>
+            </div>
+            <p>伊丽莎白二世到巴黎进行国事访问，身穿的哈特奈尔礼服被称作是“法国花园”。</p>
+          </div>
+        </div>
+      </div>
+      <!-- // Article -->
+
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1959 AD</div>
+          <div class="content-right">
+            <div class="timeAndArea">
+              <span class="period">A.D. 1959 - 1960</span>
+              <h4 class="area">UK</h4>
+            </div>
+            <p>赫迪·雅曼成为伦敦设计师协会主席，该组织建立于1942年，旨在推动英国时装产业。</p>
           </div>
         </div>
       </div>
