--- a/FashionTimeline/fashion_timeline.html
+++ b/FashionTimeline/fashion_timeline.html
@@ -5662,6 +5662,17 @@
             <p>1945年，夏帕瑞丽在巴黎的时装店重新开业。未来的设计师于贝尔·德·纪梵希（生于1927年）与皮尔·卡丹以她的助手身份学习设计。</p>
           </div>
         </div>
+
+        <div class="content-right-container">
+          <div class="century">1945 AD</div>
+          <div class="content-right">
+            <div class="timeAndArea">
+              <span class="period">A.D. 1945 - 1990</span>
+              <h4 class="area">North America</h4>
+            </div>
+            <p>由及膝长的裙子和皮便鞋组成的“波比短袜派” 凤格在少女中非常流行。</p>
+          </div>
+        </div>
       </div>
       <!-- // Article -->     
 
@@ -5675,6 +5686,8 @@
               <h4 class="area">North America</h4>
             </div>
             <p>巴黎顶尖时尚设计师所设计的微型时装模特儿巡回展“时尚剧院”到访纽约。</p>
+            <p>美国战时定量供给结束，橡胶再一次用于鞋底生产，这就带来了网球鞋生产的复兴。</p>
+            <p>在电彩《不法之徒》（1943）中，简·拉寒尔的胸部得以突出展示，电影最终在美国取得公映。</p>
           </div>
         </div>
 
@@ -5712,6 +5725,21 @@
               <h4 class="area">France</h4>
             </div>
             <p>因为对时尚产业的卓越贡献，迪奥成为首位赢得内曼·马科斯奖的法国人。</p>
+            <p>克里斯汀·迪奥推出了迪奥时装店的首批作品，其丰满的裙形和装饰短裙呈现出战后新风貌。</p>
+            <p>迪奥标志性的Bar系列日间套装将丰满的裙子和斜肩紧腰上衣组合在一起，创造出一种醒目的新款式。</p>
+          </div>
+        </div>
+
+        <div class="content-right-container">
+          <div class="century">1947 AD</div>
+          <div class="content-right">
+            <div class="timeAndArea">
+              <span class="period">A.D. 1947</span>
+              <h4 class="area">North America</h4>
+            </div>
+            <p>常春藤联盟男毕业生西德尼·温斯顿建立了普莱特品牌，奇普成为联盟裁缝。该公司是肯尼迪总统及其同侪的服饰供应商。</p>
+            <p>沃尔特·普伦基特（1902一1982）与艾琳·谢拉夫（1910一1993） 成为米高梅所有音乐片的服饰指导。</p>
+            <p>美国版《时尚芭莎》上刊登了一款由美国运动服饰设计师卡洛琳·施努勒（1908—1998) 所设计的绿白点比基尼。</p>
           </div>
         </div>
       </div>
@@ -5764,7 +5792,21 @@
               <span class="period">A.D. 1949</span>
               <h4 class="area">UK</h4>
             </div>
-            <p>英国的服饰定量供给政策结束。</p>
+            <p>1941年6月1日起在英国实施的服饰定量供给令最终结束。限制服饰裁剪的严厉措施取消，选择璔多。</p>
+          </div>
+        </div>
+
+        <div class="content-right-container">
+          <div class="century">1949 AD</div>
+          <div class="content-right">
+            <div class="timeAndArea">
+              <span class="period">A.D. 1949</span>
+              <h4 class="area">North America</h4>
+            </div>
+            <p>奥斯卡金像奖最佳服饰设计奖设立，分设黑白和彩色两种电影类别。</p>
+            <p>汤姆·凯利拍摄了一幅玛丽莲·梦露以红色天鹅绒为背景的裸身照片，图像被用于月历。</p>
+            <p>创新型内衣设计师弗雷德里克·麦林格在加利福尼亚好莱坞大道开办了自己的原创旗舰店。</p>
+            <p>波林·特里吉获得了3次科迪美国时装评论奖中的第一座，其余两座分别于1951和1959年获得。</p>
           </div>
         </div>
       </div>
@@ -5792,6 +5834,8 @@
             </div>
             <p>邦妮·卡辛赢得了内曼·马科斯奖和科迪美国时装评论奖，获得了前所未有的荣誉。</p>
             <p>詹姆斯以其“异常神秘的色彩运用和艺术化的裁剪”第一次赢得了科迪奖（两次获奖）。</p>
+            <p>伊丽莎白·泰勒在《岳父大人》中所穿的服饰由海伦·罗斯设计。</p>
+            <p>伊丽莎白·泰勒与第一任丈夫康拉德·希尔顿结婚，婚礼礼服由海伦·罗斯设计。</p>
           </div>
         </div>
       </div>
@@ -5820,6 +5864,12 @@
             <p>卡辛建立了邦妮·卡辛设计公司。她与多家生产商一起设计了不同价位的产品。</p>
             <p>詹姆斯与人体模特儿制造商卡瓦诺模型公司合作，制造出纸模裙装。</p>
             <p>詹姆斯·加拉诺斯发布了自己的商标。一年后，他在纽约举办了处女秀。</p>
+            <p>J·D·塞林格的小说《麦田里的守望者》出版后畅销全美，主人公霍尔顿·考尔菲德就是预科学校反叛的代表。</p>
+            <p>伊迪斯·赫德因黑白电影《郎心似铁》赢得了奥斯卡最佳服饰设计奖。</p>
+            <p>莫斯·马布里被任命为华纳兄弟电影公司服饰设计指导。</p>
+            <p>哈里·杜鲁门总统于9月4日将电视机推广到美国大陆两岸，东西两岸得以连接在一起。</p>
+            <p>涤纶被作为一种神奇的免烫纤维列入美国。它很便宜，方便洗涤，干得快。</p>
+            <p>享利·罗森菲尔德在其春夏时装展上推出了<b>衬衫式连衣裙</b>；这种服饰荻得了流行，并成了后续作品的核心。</p>
           </div>
         </div>
       </div>
@@ -5832,10 +5882,24 @@
           <div class="content-right">
             <div class="timeAndArea">
               <span class="period">A.D. 1952</span>
+              <h4 class="area">France</h4>
+            </div>
+            <p>理想远大的女演员碧姬·芭铎为法国成衣广商勒珀郎担任时装模特儿。</p>
+          </div>
+        </div>
+
+        <div class="content-right-container">
+          <div class="century">1952 AD</div>
+          <div class="content-right">
+            <div class="timeAndArea">
+              <span class="period">A.D. 1952</span>
               <h4 class="area">North America</h4>
             </div>
             <p>查尔斯·詹姆斯为第七大道的生产商塞缪尔·温斯顿设计了单品服饰，服饰由洛德与泰勒公司零售。</p>
             <p>赫迪·雅曼成为第一位在纽约举办时装秀的伦敦设计师。</p>
+            <p>法国鳄鱼将其广受欢迎的马球衫出口到美国，服饰上刺绣的〝鳄鱼”商标是声誉与地位的象征。</p>
+            <p>海伦·罗斯因为黑白电影《玉女奇男》获得奥斯卡最佳服饰设计奖。</p>
+            <p>露华浓发起了“火与冰”口红宣传，鼓励女性们将战争岁月拋至身后，追求迷人的生活方式。</p>
           </div>
         </div>
       </div>
@@ -5859,10 +5923,26 @@
           <div class="content-right">
             <div class="timeAndArea">
               <span class="period">A.D. 1953</span>
+              <h4 class="area">Spain</h4>
+            </div>
+            <p>克里斯托巴尔·巴伦西亚加（1895-1972）推出了球状的“气球”上衣，像茧一样将穿者的上半身包括在内。</p>
+          </div>
+        </div>
+
+        <div class="content-right-container">
+          <div class="century">1953 AD</div>
+          <div class="content-right">
+            <div class="timeAndArea">
+              <span class="period">A.D. 1953</span>
               <h4 class="area">North America</h4>
             </div>
             <p>詹姆斯为奥斯汀·赫斯特设计了参加艾森豪威尔总统就职晚会的四叶草礼服，但因为没能及时完工，她到伊丽莎白女王的舞会上才穿着。</p>
-            <p>皮埃尔·巴尔曼以祖妮女士为商标名进入美国市场，</p>
+            <p>皮埃尔·巴尔曼以祖妮女士为商标名进入美国市场。</p>
+            <p>美国出现了彩色电视机，学院风服饰的色彩得以真实呈现在观众面前。</p>
+            <p>美国版《时尚》将普莱特、奇普、剑桥的西尔斯和费恩-费恩斯坦列为常春藤最著名的4位裁缝。</p>
+            <p>好莱坞成立服饰设计协会，旨在推动服饰设计中艺术性与技术的探索。</p>
+            <p>奥斯卡金像奖首次电视上播放，明星们有了机会向全国展示自己的服饰。</p>
+            <p>男性杂志《花花公子》发行了第一期。这本杂志由休·赫夫纳在芝加哥创办，以裸女照片而闻名，</p>
           </div>
         </div>
       </div>
@@ -5878,6 +5958,63 @@
               <h4 class="area">France</h4>
             </div>
             <p>迪奥发明了A字裙。这个术语在时装辞典中用来形容肩线狭窄，往下却开始扩展直至裙角的款式。</p>
+          </div>
+        </div>
+
+        <div class="content-right-container">
+          <div class="century">1954 AD</div>
+          <div class="content-right">
+            <div class="timeAndArea">
+              <span class="period">A.D. 1954</span>
+              <h4 class="area">North America</h4>
+            </div>
+            <p>服装公司布鲁克斯兄弟有了女性更衣室，表明学院风在女性和男性中同样流行。</p>
+          </div>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1955 AD</div>
+          <div class="content-right">
+            <div class="timeAndArea">
+              <span class="period">A.D. 1955</span>
+              <h4 class="area">UK</h4>
+            </div>
+            <p>英国金发尤物戴安娜·道尔斯身着貂皮比基尼乘坐贡多拉小船在威尼斯电影节亮相。</p>
+          </div>
+        </div>
+
+        <div class="content-right-container">
+          <div class="century">1955 AD</div>
+          <div class="content-right">
+            <div class="timeAndArea">
+              <span class="period">A.D. 1955</span>
+              <h4 class="area">North America</h4>
+            </div>
+            <p>爵士乐传奇人物和时尚偶像迈尔斯·戴维斯是名副其实的学院风狂热者，他影响了这一时期其他爵士乐音乐人的风格。</p>
+            <p>学院风服饰厂商哈斯派尔发明了一种宣称不会皱的人造免烫绉条纹薄纱套装。</p>
+            <p>格里高利·派克参演的电影《穿灰色法兰绒外套的人》标题名参考了许多学院风爱好者所喜爱的流行套装。</p>
+            <p>爱马仕经典旅行包個以格蕾丝·凯丽名字命名为“凯丽“包而闻名。凯丽携带着这款包登上《生活》杂志封面。</p>
+            <p>电影《七年之痒》公映。其中玛丽莲·梦露穿着的标志性的象牙色褶绒鸡尾酒会晚礼服由威廉·特拉维拉设计。</p>
+          </div>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1956 AD</div>
+          <div class="content-right">
+            <div class="timeAndArea">
+              <span class="period">A.D. 1956</span>
+              <h4 class="area">North America/h4>
+            </div>
+            <p>格蕾丝·凯丽嫁给摩纳哥王子雷尼尔，身穿的蕾丝礼服由海伦·罗斯设计。</p>
+            <p>好莱坞性感明星简·曼斯菲尔德参演音乐喜剧《春风得意》。</p>
           </div>
         </div>
       </div>
@@ -5903,6 +6040,22 @@
       <!-- Article -->
       <div class="timeline-article">
         <div class="content-right-container">
+          <div class="century">1958 AD</div>
+          <div class="content-right">
+            <div class="timeAndArea">
+              <span class="period">A.D. 1958</span>
+              <h4 class="area">North America</h4>
+            </div>
+            <p>海伦·罗斯为參演《热铁皮屋顶上的猫》的伊丽莎白·泰勒设计了服饰。</p>
+          </div>
+        </div>
+      </div>
+      <!-- // Article -->
+
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
           <div class="century">1959 AD</div>
           <div class="content-right">
             <div class="timeAndArea">
@@ -5910,6 +6063,80 @@
               <h4 class="area">UK</h4>
             </div>
             <p>赫迪·雅曼成为伦敦设计师协会主席，该组织建立于1942年，旨在推动英国时装产业。</p>
+          </div>
+        </div>
+
+        <div class="content-right-container">
+          <div class="century">1959 AD</div>
+          <div class="content-right">
+            <div class="timeAndArea">
+              <span class="period">A.D. 1959 - 1960</span>
+              <h4 class="area">North America</h4>
+            </div>
+            <p>生于澳大利亚的欧利·乔治·凯利（1897-1964）因黑白电影《热情如火》获得奥斯卡最佳服饰设计奖。</p>
+            <p>露丝·汉德勒（美泰玩具公司联合创始人之一）发明的芭比娃娃在纽约举行的美国玩具展会上被介绍给全世界。</p>
+            <p>生于澳大利亚的欧利·凯利凭借为玛丽莲·梦露参演的电影《热情如火》设计服饰而首次赢得奥斯卡奖。</p>
+          </div>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1961 AD</div>
+          <div class="content-right">
+            <div class="timeAndArea">
+              <span class="period">A.D. 1961</span>
+              <h4 class="area">North America</h4>
+            </div>
+            <p>约翰·特拉沃尔塔和奥利维娅·纽顿一约翰参演的电影《油脂》使得学院风再度流行起来。</p>
+            <p>女演员帕特里夏`尼尔在电影《蒂凡尼的早餐》中展示了许多服饰，其设计师为波林·特里吉。</p>
+          </div>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1963 AD</div>
+          <div class="content-right">
+            <div class="timeAndArea">
+              <span class="period">A.D. 1963</span>
+              <h4 class="area">North America</h4>
+            </div>
+            <p>贝蒂·福莱顿的《女性的奥秘》出版。其中强调了女性对于其家庭主妇角色的不满。</p>
+          </div>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1964 AD</div>
+          <div class="content-right">
+            <div class="timeAndArea">
+              <span class="period">A.D. 1964</span>
+              <h4 class="area">North America</h4>
+            </div>
+            <p>热纳维耶芙·安东尼·德阿里奥出版了《优雅指南》。她在书中陈述自己人生的任务就是将平庸的女性改造成优雅人物。</p>
+          </div>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1978 AD</div>
+          <div class="content-right">
+            <div class="timeAndArea">
+              <span class="period">A.D. 1978</span>
+              <h4 class="area">North America</h4>
+            </div>
+            <p>约翰·特拉沃尔塔和奥利维娅·纽顿一约翰参演的电影《油脂》使得学院风再度流行起来。</p>
           </div>
         </div>
       </div>
